log/build_2024-07-19_16-46-15/arduinobot_py_examples/stderr.log
  File "/home/monster/arduinobot_ws/install/arduinobot_py_examples/lib/python3.10/site-packages/arduinobot_py_examples/simple_subscriber.py", line 20
    if __name__ == '__main__'
                             ^
SyntaxError: expected ':'

